--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ layout: default
               <span>in</span>
               <span class="post-tags">
                 {% for tag in page.tags %}
-                <a href="{{ site.baseurl }}/tag/{{ tag }}" class="post__tag">{{ tag }}</a>
+                <div href="{{ site.baseurl }}/tag/{{ tag }}" class="post__tag">{{ tag }}</div>
                 {% endfor %}
               </span>
               {% endif %}
