--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,16 @@
   <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
 
   <style>
-  {% capture include_to_scssify %}
-    {% include main.scss %}
-  {% endcapture %}
-  {{ include_to_scssify | scssify }}
+    {% if site.tags != "" %}
+    {% include collecttags.html %}
+    {% endif %}
   </style>
+  
+  <style>
+    {% capture include_to_scssify %}
+    {% include main.scss %}
+    {% endcapture %}
+    {{ include_to_scssify | scssify }}
+  </style>
+
 </head>
