--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,11 +42,19 @@ layout: default
               <a href="{{site.baseurl}}/about/" class="post__author-link">{{site.author.name}}</a>
               {% if page.tags.size >= 1 %}
               <span>in</span>
-              <span class="post-tags">
+              
+              <span>[
+                {% for tag in page.tags %}
+                  {% capture tag_name %}{{ tag }}{% endcapture %}
+                  <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+                {% endfor %}
+              ]</span>
+              
+              <!-- <span class="post-tags">
                 {% for tag in page.tags %}
                 <div href="{{ site.baseurl }}/tag/{{ tag }}" class="post__tag">{{ tag }}</div>
                 {% endfor %}
-              </span>
+              </span> -->
               {% endif %}
             </div>
           </div>
