Tage page update

--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: default
 ---
 <div class="post">
@@ -11,7 +11,7 @@ layout: default
 {% endfor %}
 </ul>
 </div>
-<hr>
+<hr> -->
 
 
 
@@ -19,7 +19,7 @@ layout: default
 
 
 
-<!-- ---
+---
 layout: default
 ---
 <div class="container">
@@ -45,4 +45,4 @@ layout: default
       </div>
     </div>
   </div>
-</div> -->
+</div>
