--- a/_includes/collecttags.html
+++ b/_includes/collecttags.html
@@ -1,7 +1,7 @@
 {% assign rawtags = "" %}
 {% for post in site.posts %}
-  {% assign ttags = post.tags | join:'|' | append:'|' %}
-  {% assign rawtags = rawtags | append:ttags %}
+  {% assign tags = post.tags | join:'|' | append:'|' %}
+  {% assign rawtags = rawtags | append:tags %}
 {% endfor %}
 {% assign rawtags = rawtags | split:'|' | sort %}
 
