--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
   </li>
   
   <li class="nav__item">
-    <a href="{{ about.url | prepend: site.baseurl }}" class="nav__link">{{ About }}</a>
+    <a href="{{ site.baseurl/About }}/" class="nav__link">About</a>
   </li>
   
   
