--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,18 +3,18 @@
     <a href="{{ site.baseurl }}/" class="nav__link">Home</a>
   </li>
   
-  <li class="nav__item">
+  <!-- <li class="nav__item">
     <a href="{{ site.baseurl/About }}/" class="nav__link">About</a>
-  </li>
+  </li> -->
   
   
-  <!-- {% for page in site.pages %}
-    {% unless page.name == 'tags.html' or page.name == '404.html' or page.name contains "tag" or page.name contains "TAG" %}
+  {% for page in site.pages %}
+    {% unless page.name == 'tags.html' or page.name == '404.html' or page.name contains "tag:" or page.name contains "TAG:" %}
       {% if page.title %}
       <li class="nav__item">
         <a href="{{ page.url | prepend: site.baseurl }}" class="nav__link">{{ page.title }}</a>
       </li>
       {% endif %}
     {% endunless %}
-  {% endfor %} -->
+  {% endfor %}
 </ul>
