--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,14 +3,13 @@
     <a href="{{ site.baseurl }}/" class="nav__link">Home</a>
   </li>
   
-  <!-- <li class="nav__item">
-    <a href="{{ site.baseurl/About }}/" class="nav__link">About</a>
-  </li> -->
+  <li class="nav__item">
+    <a href="{{ site.baseurl/About }}/" class="nav__link">WASSUP</a>
+  </li>
   
   
   {% for page in site.pages %}
-    {% unless page.title contains "tag" or page.title contains "TAG" %}  
-  <!-- {% unless page.name == 'tags.html' or page.name == '404.html' or page.title contains "tag" or page.title contains "TAG" %} -->
+    {% unless page.name == 'tags.html' or page.name == '404.html' or page.title contains "tag" or page.title contains "TAG" %}
       {% if page.title %}
       <li class="nav__item">
         <a href="{{ page.url | prepend: site.baseurl }}" class="nav__link">{{ page.title }}</a>
