--- a/_includes/article-content.html
+++ b/_includes/article-content.html
@@ -41,7 +41,7 @@
             <span>in</span>
             <span class="article-tags">
               {% for tag in post.tags %}
-                <div href="{{ site.baseurl }}/tag/{{ tag }}" class="article__tag">{{ tag }}</div>
+                <a href="{{ site.baseurl }}/tag/{{ tag }}" class="article__tag">{{ tag }}</a>
               {% endfor %}
             </span>
           {% endif %}
