--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -15,6 +15,10 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col col-12 col-d-10 col-m-12 push-m-0 push-d-1">
+      <h2>Articles</h2>
+      {% for post in page.posts %}
+       {<h2>post</h2>}
+      {% endfor %}
       <div class="container__inner">
         <div class="row grid">
           {% for post in page.posts %}
