--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -16,12 +16,9 @@ layout: default
   <div class="row">
     <div class="col col-12 col-d-10 col-m-12 push-m-0 push-d-1">
       <h2>Articles</h2>
-      {% for post in page.posts %}
-       {<h2>post</h2>}
-      {% endfor %}
       <div class="container__inner">
         <div class="row grid">
-          {% for post in page.posts %}
+          {% for post in site.tags[page.tag] %}
             {% include article-content.html %}
           {% endfor %}
         </div>
@@ -30,6 +27,7 @@ layout: default
   </div>
 </div>
 
+<!-- New kinda working -->
 <!-- ---
 layout: default
 ---
@@ -44,6 +42,24 @@ layout: default
 </ul>
 </div>
 <hr> -->
+
+<!-- ORIGINAL -->
+<!-- <div class="container">
+  <div class="row">
+    <div class="col col-12 col-d-10 col-m-12 push-m-0 push-d-1">
+      <h2>Articles</h2>
+      <div class="container__inner">
+        <div class="row grid">
+          {% for post in page.posts %}
+            {% include article-content.html %}
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
 
 
 
