--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,12 +1,12 @@
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-610B5SJ5H3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google-analytics }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
-  gtag('config', 'G-610B5SJ5H3');
+  gtag('config', '{{ site.google-analytics }}');
 </script>
+
 
 
 
