--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
   
   
   {% for page in site.pages %}
-    {% unless page.name == 'tags.html' or page.name == '404.html' or page.layout == "tag_page" %}
+    {% unless page.name == 'tags.html' or page.name == '404.html' or page.layout == "tag_page" or page.name == 'styleguide.html' or page.name == 'styleguide.md'%}
       {% if page.title %}
       <li class="nav__item">
         <a href="{{ page.url | prepend: site.baseurl }}" class="nav__link">{{ page.title }}</a>
