--- a/_includes/footer-widgets/widget-subscribe-contact.html
+++ b/_includes/footer-widgets/widget-subscribe-contact.html
@@ -5,6 +5,6 @@
       <h3 class="widget__title">Send me a message!</h3>
     </div>
     <p class="subscribe-subtitle">Send me a message and I will get back to you as soon as possible.</p>
-    <button class="subscribe-button button button--primary" id="membedded-subscribe" type="submit" name="subscribe"  onclick="window.location.href='{{site.baseurl}}/about.html';">Join</button>
+    <button class="subscribe-button button button--primary" id="membedded-subscribe" type="submit" name="subscribe"  onclick="window.location.href='{{site.baseurl}}/contact/';">Contact</button>
   </div>
 </div>
