--- a/_includes/article-content.html
+++ b/_includes/article-content.html
@@ -1,10 +1,27 @@
-<div class="article col {% if forloop.index <= 2 and page.url == '/' %}col-6 col-t-12 grid__post animate article--big{% else %}col-4 col-d-6 col-t-12 grid__post animate{% endif %}">
+<div class="article col 
+  {% if forloop.index <= 2 and page.url == '/' %}
+    col-6 col-t-12 grid__post animate article--big
+  {% else %}
+    col-4 col-d-6 col-t-12 grid__post animate
+  {% endif %}
+  {% if post.snapshot %}
+    article--snapshot
+  {% endif %}">
+
   <div class="article__inner">
 
     {% if post.image %}
-    <a class="article__image" href="{{post.url | prepend: site.baseurl}}">
-      <img class="lazy" data-src="{{site.baseurl}}{{post.image}}" alt="{{post.title}}">
-    </a>
+      {% if post.snapshot %}
+        <!-- Non-clickable image for snapshots -->
+        <div class="article__image article__image--snapshot">
+          <img class="lazy" data-src="{{site.baseurl}}{{post.image}}" alt="{{post.title}}">
+        </div>
+      {% else %}
+        <!-- Clickable image for regular articles -->
+        <a class="article__image" href="{{post.url | prepend: site.baseurl}}">
+          <img class="lazy" data-src="{{site.baseurl}}{{post.image}}" alt="{{post.title}}">
+        </a>
+      {% endif %}
     {% endif %}
 
     <div class="article__content">
@@ -12,25 +29,29 @@
       <div class="article__meta">
         <span class="article__minutes">
           {% assign words = post.content | number_of_words %}
-            {% if words < 360 %}
-              1 min read
-            {% else %}
-              {{ words | divided_by:180 }} min read
+          {% if words < 360 %}
+            1 min read
+          {% else %}
+            {{ words | divided_by:180 }} min read
           {% endif %}
-          <time class="article__date" datetime="{{ post.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}{{ post.date | date: date_format }}</time>
+          <time class="article__date" datetime="{{ post.date | date_to_xmlschema }}">
+            {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+            {{ post.date | date: date_format }}
+          </time>
         </span>
       </div>
 
       <h2 class="article__title">{{ post.title }}</h2>
-
       <p class="article__excerpt">{{ post.description }}</p>
 
       <div class="article__bottom">
-
+        
         {% if site.author.avatar %}
-        <div class="article__author">
-          <a href="{{site.baseurl}}/about/" aria-label="{{site.author.name}}"><img class="article__author-image lazy" data-src="{{site.baseurl}}{{site.author.avatar}}" alt="{{site.author.name}}'s Picture"></a>
-        </div>
+          <div class="article__author">
+            <a href="{{site.baseurl}}/about/" aria-label="{{site.author.name}}">
+              <img class="article__author-image lazy" data-src="{{site.baseurl}}{{site.author.avatar}}" alt="{{site.author.name}}'s Picture">
+            </a>
+          </div>
         {% endif %}
 
         <div class="article__bottom-meta">
@@ -49,6 +70,5 @@
       </div>
 
     </div>
-
   </div>
 </div>
